# ytdl

./: .gitignore  Cargo.toml  README.md
src/: album.rs  blacklist.rs  builder.rs  cache.rs  cmd.rs  config.rs  cookies.rs  logging.rs  main.rs  platforms.rs  shell.rs  ytdlp.rs
src/album/: cmd.rs  mod.rs
src/cookies/: access.rs  cmd.rs  mod.rs
src/dl/: album.rs  cmd.rs  constants.rs  mod.rs  quality.rs  repair_date.rs
src/sync/: actions.rs  blacklist.rs  builder.rs  cache.rs  cmd.rs  display.rs  dl.rs  mod.rs
src/utils/: ansi_strip.rs  filenames.rs  logging.rs  mod.rs  platforms.rs  regex.rs  shell.rs  ytdlp.rs
