[package]
name = "ytdl"
version = "0.13.1"
edition = "2021"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
walkdir = "2.5.0"
regex = "1.11.1"
rayon = "1.10.0"
indicatif = "0.17.11"
colored = "3.0.0"
dirs = "6.0.0"
anyhow = "1.0.96"
inquire = "0.7.5"
pomsky = "0.11.0"
pomsky-macro = "0.11.0"
unicode-width = "0.2.0"
once_cell = "1.20.3"
terminal_size = "0.4.1"
reqwest = { version = "0.12.12", features = [
    "blocking",
    "native-tls-vendored",
] }
mime_guess = "2.0.5"
