[package]
name = "ytdl"
version = "0.14.1"
edition = "2021"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
walkdir = "2.5.0"
regex = "1.11.1"
rayon = "1.10.0"
indicatif = "0.17.11"
colored = "3.0.0"
dirs = "6.0.0"
anyhow = "1.0.97"
inquire = "0.7.5"
pomsky = "0.11.0"
pomsky-macro = "0.11.0"
reqwest = { version = "0.12.12", default-features = false, features = ["blocking", "rustls-tls"] }
mime_guess = "2.0.5"
