[package]
name = "ytdl"
version = "0.14.4"
edition = "2024"
publish = false

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
walkdir = "2.5.0"
regex = "1.12.3"
rayon = "1.12.0"
indicatif = "0.18.4"
colored = "3.1.1"
dirs = "6.0.0"
anyhow = "1.0.102"
inquire = "0.9.4"
pomsky = "0.12.0"
pomsky-macro = "0.12.0"
reqwest = { version = "0.13.3", default-features = false, features = [
    "blocking",
] }
mime_guess = "2.0.5"
